[project]
name = "chicken-coop-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "greenlet>=3.2.1",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]
